# server-monitor

./: .gitignore  pyproject.toml  requirements.txt  run_monitor.py  setup_mac.py
.github/workflows/: build-mac.yml
desktop/: main.py
desktop/collectors/: system.py
desktop/ui/: charts.py  main_window.py
server_monitor/: __init__.py  __main__.py  app.py  chart.py  collectors.py
