[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "server-monitor"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = ["PySide6>=6.6.0", "psutil>=5.9.0"]

[tool.setuptools.packages.find]
include = ["desktop*", "server_monitor*"]
